name:                faust-stack
version:             0.1.0.0
synopsis:            whatever
description:         whatever
homepage:            https://github.com/Muzietto/transformerz/haskell/faust-stack/faust-stack#readme
license:             BSD3
license-file:        LICENSE
author:              Marco Faustinelli
maintainer:          marco_faustinelli@yahoo.com
copyright:           2019 Marco Faustinelli
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Faust.Faust
                     , Faust.Reader
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , transformers
  default-language:    Haskell2010

executable faust-stack
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , faust-stack
                     , containers
                     , mtl
                     , transformers
  default-language:    Haskell2010

test-suite faust-stack-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , faust-stack
                     , hspec
                     , QuickCheck
                     , containers
                     , mtl
                     , transformers
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Muzietto/transformerz
